--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="full-menu">
+    <div class="menu">
 
     </div>
     <div class="topbar">
@@ -87,7 +87,6 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js" type="module"></script>
 </body>
 
 </html>
