--- a/src/index.html
+++ b/src/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Style guide</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  <link rel="stylesheet" href="vendor/fontello-a495ff57/css/fontello.css">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Style guide</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="vendor/fontello-a495ff57/css/fontello.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div id="app-wrapper">
-  </div>
+    <div id="app-wrapper">
+    </div>
 
-  <script id="template-layout" type="text/x-handlebars-template">
+    <script id="template-layout" type="text/x-handlebars-template">
         <div>
-            <div id="top-bar" class="top-bar"></div>
+            <div id="top-bar" class="top-bar "></div>
             <div id="side-bar-wrapper"></div>
-            <div id="main" class = "main  main--full-menu"></div>
+            <div id="main" class = "main"></div>
         </div>
     </script>
 
-  <script id="template-page-global" type="text/x-handlebars-template">
+    <script id="template-page-global" type="text/x-handlebars-template">
         <div id={{ this }} class="container page">
         </div>
     </script>
 
-  <script id="template-section-basic" type="text/x-handlebars-template">
+    <script id="template-section-basic" type="text/x-handlebars-template">
     <div id="{{ id }}" class="section-basic">
         <div class="section-basic__row">
             <h2 class="section-basic__header">
@@ -42,7 +42,7 @@
         {{/each}} 
     </div>
     </script>
-  <script id="template-component-data-scope-form" type="text/x-handlebars-template">
+    <script id="template-component-data-scope-form" type="text/x-handlebars-template">
       <form class = "data-scope">
           <label class="data-scope_label">{{ label1 }}</label>
           <input type="text" name="data1" class="data-scope_input">
@@ -53,10 +53,10 @@
           </button>
       </form>
     </script>
-  <script id="template-section-side-bar" type="text/x-handlebars-template">
+    <script id="template-section-side-bar" type="text/x-handlebars-template">
         <div class="side-bar">
             <div class="side-bar__header">
-                <div class="side-bar__logo">{{ logo }}</div>
+                <div class="side-bar__logo"><img src={{ logo }} alt="logo"></div>
                 <div class="side-bar__menu-button">
                   <div class="side-bar__hamburger"></div>
                   <div class="side-bar__hamburger"></div>
@@ -69,7 +69,7 @@
             </div>
         </div>
     </script>
-  <script id="template-componet-menu" type="text/x-handlebars-template">
+    <script id="template-componet-menu" type="text/x-handlebars-template">
         <div class="menu">
             <ul class="menu__list">
             {{#each links}}
@@ -86,9 +86,43 @@
             </ul>    
         </div>
     </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <script src="js/app.js" type="module"></script>
+    <script id="template-section-top-bar" type="text/x-handlebars-template">
+        <div class="top-bar">
+           <div class="top-bar__line-notification-wrapper"></div>
+            <div id = "top-bar__walet-wrapper" class="top-bar__column top-bar__column--2">
+                <div class="top-bar__button">
+                    <i class="icon-wallet top-bar__icon"></i> walet
+                    <div class="top-bar__wallet-value">$1,500.00</div>
+                    <i class="icon-arrow-down top-bar__icon top-bar__icon--small"></i> 
+                </div>
+                
+                <div class="top-bar__button">
+                    
+                </div>
+           </div> 
+           <div id = "top-bar__notification-wrapper" class="top-bar__column">
+                <div class="top-bar__button">
+                    <i class="icon-notification top-bar__icon top-bar__icon--notification top-bar__icon--notification-signal"></i> notification
+                </div>
+           </div>
+           <div id = "top-bar__profile-wrapper" class="top-bar__column top-bar__column--2">
+                <div class="top-bar__button">
+                    <i class="icon-profile top-bar__icon"></i> profile
+                    <div class="top-bar__profile-name">
+                        Leonardo Dicaprio
+                    </div>
+                </div>
+           </div>
+           <div class="top-bar__column">
+               <div class="top-bar__button">
+                   <i class="icon-quit top-bar__icon"></i> exit
+               </div>
+           </div>         
+        </div>
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="js/app.js" type="module"></script>
 </body>
 
 </html>
